force-app/main/default/objects/KimbleOne__PeriodReceivable__c/KimbleOne__PeriodReceivable__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Period Receivable</label>
    <nameField>
        <label>PeriodReceivable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>