force-app/main/default/objects/KimbleOne__PeriodReceivable__c/fields/KimbleOne__DemandBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DemandBusinessUnit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Demand Business Unit</label>
    <referenceTo>KimbleOne__BusinessUnit__c</referenceTo>
    <relationshipLabel>Invoice Schedule (Demand Business Unit)</relationshipLabel>
    <relationshipName>InvoiceScheduleDemand</relationshipName>
    <type>Lookup</type>
</CustomField>