force-app/main/default/objects/KimbleOne__PeriodReceivable__c/fields/KimbleOne__IsInternal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsInternal__c</fullName>
    <formula>IF(AND(KimbleOne__DemandBusinessUnit__c != null,KimbleOne__SupplyBusinessUnit__c != null),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Internal</label>
    <type>Checkbox</type>
</CustomField>