force-app/main/default/objects/KimbleOne__PeriodReceivable__c/fields/KimbleOne__ReceivableDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ReceivableDate__c</fullName>
    <label>Receivable Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>