force-app/main/default/objects/KimbleOne__PeriodReceivable__c/fields/KimbleOne__SupplyBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplyBusinessUnit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supply Business Unit</label>
    <referenceTo>KimbleOne__BusinessUnit__c</referenceTo>
    <relationshipLabel>Invoice Schedule (Supply Business Unit)</relationshipLabel>
    <relationshipName>InvoiceScheduleSupply</relationshipName>
    <type>Lookup</type>
</CustomField>